Denora Version 1.4.0
--------------------
Provided by Denora Team <dev@denorastats.org> - 2008
01/09 U Updated GeoIP.dat                                         [ #00]
12/20 F Fixed p10 account not populated to sql on N message       [#465]
12/20 F Give denorarc more time for the stats process to start    [#469]

Provided by Denora Team <dev@denorastats.org> - 2007
12/02 A New example config file (english)                         [ #00]
11/26 A New HTML template which now validates against 4.01 strict [ #00]
11/18 A Added rejoin lock time support for inspircd               [ #00]
11/18 A Added Invite Exception support to inspircd module         [ #00]
08/17 A Admins passwords are now hidden in debug messages         [#414]
08/16 A Added recompile option to Makefile, make recompile        [ #00]
08/16 A Added new protocol ScaryNet                               [ #00]
08/13 A Added XMLRPC documentation                                [#407]
08/12 A Added option to track only +r users on chanstats          [ #00]
08/10 A New optional token on connect block for quitprefix        [#404]
07/25 A Admin passwords are now MD5-encrypted in SQL              [ #00]
07/18 A Moved deprecated ircd protocol files out of the way       [ #00]
07/18 A Made the ./Config process more clear about MySQL support  [ #00]
02/28 A Added swhois support to nefarious                         [ #00]
02/28 A Added P10 account support                                 [ #00]
01/11 A Improved P10 hidden host support                          [ #00]
11/17 U Updated GeoIP database file                               [ #00]
09/04 U Updated GeoIP database file                               [ #00]
08/23 U Updated check_db                                          [ #00]
08/23 U Removed unneccessary rdb_escape usage                     [ #00]
08/23 U Updated NOQUIT/QS support not to rely on CAPAB            [ #00]
08/23 U Updated autoconf stuff                                    [#423]