@@ -18,8 +18,6 @@
 #include "denora.h"
 #include "ratbox.h"
 
-int ts6nickcount = 0;
-
 IRCDVar myIrcd[] = {
     {"Ratbox 2.0+",             /* ircd name                 */
      "+o",                      /* StatServ mode             */
@@ -74,7 +72,8 @@ IRCDVar myIrcd[] = {
      IRCD_DISABLE,              /* hidden oper               */
      IRCD_ENABLE,               /* extra warning             */
      IRCD_DISABLE               /* Report sync state         */
-     },
+     }
+    ,
 };
 
 IRCDCAPAB myIrcdcap[] = {
@@ -530,15 +529,14 @@ void ratbox_cmd_connect(void)
 void ratbox_cmd_bot_nick(char *nick, char *user, char *host, char *real,
                          char *modes)
 {
-    char nicknumbuf[10];
+    char *nicknumbuf = ts6_uid_retrieve();
+
     if (UseTS6) {
-        ircsnprintf(nicknumbuf, 10, "%sAAAAA%c", Numeric,
-                    (ts6nickcount + 'A'));
         send_cmd(TS6SID, "UID %s 1 %ld %s %s %s 0 %s :%s", nick,
                  (long int) time(NULL), modes, user, host, nicknumbuf,
                  real);
+
         new_uid(nick, nicknumbuf);
-        ts6nickcount++;
     } else {
         send_cmd(NULL, "NICK %s 1 %ld %s %s %s %s :%s", nick,
                  (long int) time(NULL), modes, user, host, ServerName,
@@ -771,15 +769,13 @@ void ratbox_cmd_mode(char *source, char *dest, char *buf)
 
 void ratbox_cmd_nick(char *nick, char *name, const char *mode)
 {
-    char nicknumbuf[10];
+    char *nicknumbuf = ts6_uid_retrieve();
     if (UseTS6) {
-        ircsnprintf(nicknumbuf, 10, "%sAAAAA%c", Numeric,
-                    (ts6nickcount + 'A'));
         send_cmd(TS6SID, "UID %s 1 %ld %s %s %s 0 %s :%s", nick,
                  (long int) time(NULL), mode, ServiceUser, ServiceHost,
                  nicknumbuf, name);
+
         new_uid(nick, nicknumbuf);
-        ts6nickcount++;
     } else {
         send_cmd(NULL, "NICK %s 1 %ld %s %s %s %s :%s", nick,
                  (long int) time(NULL), mode, ServiceUser, ServiceHost,
